<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bg_toolbar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnCancelText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentStart="true"
            app:tint="@color/text_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/btnApplyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_done"
            android:textColor="@color/brand_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/edtAddText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_hint"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/text_secondary"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvColorPicker"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_color_picker"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>